[gd_scene load_steps=2 format=3 uid="uid://b4hc2xsvkl52r"]

[ext_resource type="Script" uid="uid://bvsfvlfi8yv1v" path="res://editor/panels/transport_bar.gd" id="1_transport"]

[node name="TransportBar" type="PanelContainer"]
custom_minimum_size = Vector2(0, 40)
script = ExtResource("1_transport")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="PlayButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="StopButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Stop"

[node name="TimeLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "00:00:000"
horizontal_alignment = 1

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="HBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="HBoxContainer/StopButton" to="." method="_on_stop_button_pressed"]
